# study

./: .gitignore  .gitmodules  .hintrc  CLAUDE.md  README.md  css - Shortcut.lnk  jenkinsfile  package-lock.json  test
Arduino/: ardunio1.ino  ardunio2.ino  ardunio3.ino  s1.ino  s2.ino  s3.ino  s4.ino
ISLR/: Chapter01_Introduction_note.md  Chapter02_Statistical_Learning_note.md  Chapter03_Linear_Regresion_note.md  Excecises 3.7.md  Exercises 2.4.md
InferentialStatisticalAnalysiswithPython/: This-or-That-Supplement.docx  ~$is-or-That-Supplement.docx
MailSorter/: MailSorter.sln
TheMangaGuideToStatistics/: TMG2S_note.md
audioTwilioOpenAI/: audio_processor.py  main.py  openai_client.py  requirements.txt  twilio_integration.py  twilio_router.py  webrtc_router.py
autoscript/: CollapseCECID.au3  UninstallWebEx.au3
bat/: README.md  arg.bat  env.bat  s01.bat  s02.bat  s03.bat  s04.bat  setlocal.cmd  special.cmd  starttime.bat  title.cmd  win.ini
c/: WebSocketProtocol.h  datatype.c  s1.cpp  s2.cpp  s3.cpp  s4.c  s6.cpp  s7.h  test.html  three.c  yahtzee.cpp
cmakestudy/: CMakeLists.txt
cnn/: CNN_VGG16_SaliencyMap.py  classification.ipynb  feature_map.py  learn_rmsprop_001.py  learncnn_002.py  learntensorflow_001.py  learntensorflow_002.py  plt.py  saliency_map.py  saliency_map_001.ipynb  saliency_map_001.py  saliency_maps_training.py
collatzconjecture/: .gitignore  Collatz.java  collatz.cpp  collatz.py  collatz_recursion.py
cplusplus/: io  (+2 more)
makestudy/: .gitignore  Makefile.am  configure.ac
makestudy/src/: hw.c
makestudy/src/helloworld/: helloworld.c
(+1282 files in other folders)
