# initilize the process 
AC_INIT([hw], [0.01]) 
# make config headers
AC_CONFIG_HEADERS([config.h])
# Auxillary files go here
AC_CONFIG_AUX_DIR([build-aux])
# init automake
AM_INIT_AUTOMAKE([1.11])
#configure and create "Makefile"
AC_CONFIG_FILES([Makefile])
#find and probe C compiler
AC_PROG_CC
#End
AC_OUTPUT
